tests/textual/error/choose-wrong-1st-argument.uplc
(program 0.0.0 [[[(force (force (builtin chooseList))) (con integer 0)] (con integer 1)] (con integer 2)])
